small design changes

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -2,10 +2,10 @@
   <div id="profile">
     <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
-      Hello! My name is Paul Scott. I am a master's student at the
-      University of Pennsylvania studying computer and information science.
-      I graduated from Penn State with a bachelor's in computer science.
-      My areas of interest are artificial intelligence, machine learning, and software engineering.
+      Hello! My name is Paul Scott. I am a master's student at the University of
+      Pennsylvania studying computer and information science. I graduated from
+      Penn State with a bachelor's in computer science. My areas of interest are
+      artificial intelligence, machine learning, and software engineering.
     </p>
   </div>
 </div>
