--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -5,7 +5,7 @@
       Hello! My name is Paul Scott. I am a master's student at the University of
       Pennsylvania studying computer and information science. I graduated from
       Penn State with a bachelor's in computer science. My areas of interest are
-      artificial intelligence, machine learning, and software engineering.
+      in machine learning, natural language processing, and software engineering.
     </p>
   </div>
 </div>
