--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -12,6 +12,7 @@
         [link]="info.link"
         [style.--flex-large]="getLargeFlex(infoGroup.columnCount)"
         [style.--flex-small]="getSmallFlex(infoGroup.columnCount)"
+        [style.--column-count]="infoGroup.columnCount"
       >
       </app-info>
     </div>
