--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,9 +1,7 @@
 /* colors */
-$body-color: #222;
-$footer-text-color: #999999;
-$primary-color: #00d5ff;
-$header-color: linear-gradient(to right, #00d5ffcc, #5cff82cc);
-$title-gradient: linear-gradient(to right, #00d5ff, #5cff82);
+$body-color: black;
+$gradient-transparent: linear-gradient(to right, #004f99cc, #008545cc);
+$gradient: linear-gradient(to right, #004f99, #008545);
 $description-background: #00000099;
 $shadow: 5px 5px 20px rgba(0, 0, 0, 0.75);
 
