--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,7 +8,8 @@ header {
   width: 100%;
   height: 4rem;
   transition: 0.3s;
-  background: transparent;
+  background: $gradient-transparent;
+  backdrop-filter: blur(10px);
   overflow: hidden;
 
   img {
@@ -31,11 +32,6 @@ nav {
     overflow: hidden;
     border-radius: 0 0 1rem 1rem;
   }
-}
-
-.header-scroll {
-  background: $header-color;
-  backdrop-filter: blur(10px);
 }
 
 .header-with-menu {
