--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -55,7 +55,7 @@ nav {
 .menu-icon-bar {
   width: 100%;
   height: 0.2rem;
-  background: $body-color;
+  background: white;
   transition: 0.3s;
   border-radius: 0.2rem;
 
