--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -26,6 +26,7 @@
   margin: 1vw;
   border-radius: 2rem;
   background: $gradient;
+  box-sizing: border-box;
 
   @include phone {
     padding: 1rem;
