--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,5 +6,5 @@
     >
   </p>
   <p>Created using Angular</p>
-  <p>Last updated January 30<sup>th</sup> 2022</p>
+  <p>Last updated February 4<sup>th</sup>, 2022</p>
 </div>
