--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -9,6 +9,7 @@
   padding: calc(10vh + 2rem) 0 10vh 0;
   background: $gradient;
   margin-bottom: 0.5vw;
+  box-shadow: $box-shadow;
 
   @include phone {
     padding: 4rem 0 1rem 0;
