--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,11 @@
 <div class="footer">
   <p>
-    Call at (215) 880-9592 or email at
+    Email at
     <a href="mailto: pauljscott8@gmail.com" target="_blank"
       >pauljscott8@gmail.com</a
     >
+    or call at (215) 880-9592
   </p>
   <p>Created using Angular</p>
-  <p>Last updated May 13<sup>th</sup>, 2022</p>
+  <p>Last updated August 26<sup>th</sup>, 2022</p>
 </div>
