--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header id="header" [class.header-with-menu]="menuIsVisible">
-  <img src="../../../assets/images/logo.svg" alt="Paul Scott" />
+  <img src="../../../assets/images/logo_new.svg" alt="Paul Scott" />
   <div class="menu-icon" (click)="toggleMenu()">
     <div class="menu-icon-bar" [class.to-x-mark]="menuIsVisible"></div>
     <div class="menu-icon-bar" [class.to-x-mark]="menuIsVisible"></div>
