--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,7 +8,7 @@ header {
   width: 100%;
   height: 4rem;
   transition: 0.3s;
-  background: $gradient-transparent;
+  background: $primary-color-transparent;
   backdrop-filter: blur(10px);
   overflow: hidden;
 
