--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -7,9 +7,8 @@
   height: auto;
   border-radius: 0 0 3rem 3rem;
   padding: calc(10vh + 2rem) 0 10vh 0;
-  background: $gradient;
+  background: $primary-color;
   margin-bottom: 0.5vw;
-  box-shadow: $box-shadow;
 
   @include phone {
     padding: 4rem 0 1rem 0;
@@ -30,12 +29,12 @@
     height: 20vh;
     border-radius: 25%;
     margin-bottom: 1rem;
-    border: solid 4px white;
+    border: solid 6px $body-color;
   }
 
   #about {
     margin-top: 0.5rem;
     font-size: 2.2vh;
-    color: white;
+    color: $body-color;
   }
 }
