--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,9 +1,9 @@
 /* colors */
-$body-color: #111;
-$gradient-transparent: linear-gradient(to right, #0055ffcc, #00d66bcc);
-$gradient: linear-gradient(to right, #0055ff, #00d66b);
-$description-background: #000000bb;
-$box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.75);
+$body-color: #304657;
+$primary-color: #00e5ff;
+$primary-color-transparent: #00e5ffcc;
+$description-background: #304657cc;
+$link-color: blue;
 
 /* font */
 $font-large: 36px;
