--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -7,8 +7,9 @@
   height: auto;
   border-radius: 0 0 3rem 3rem;
   padding: calc(10vh + 2rem) 0 10vh 0;
-  background: $primary-color;
+  background: $gradient;
   margin-bottom: 0.5vw;
+  box-shadow: $box-shadow;
 
   @include phone {
     padding: 4rem 0 1rem 0;
@@ -22,11 +23,11 @@
   max-width: 64rem;
   width: 100%;
   height: auto;
-  padding: 2rem;
+  padding: 1rem;
   line-height: 1.5;
 
   img {
-    height: 20vh;
+    height: 25vh;
     border-radius: 25%;
     margin-bottom: 1rem;
     border: solid 6px $body-color;
