--- a/src/app/components/section-title/section-title.component.scss
+++ b/src/app/components/section-title/section-title.component.scss
@@ -3,11 +3,11 @@
 
 .section-title {
   font-size: $font-large;
-  color: $body-color;
+  color: $text-color;
   padding: 2rem;
   margin: 1vw;
   border-radius: 2rem;
-  background: $gradient;
+  background: $primary-color;
   box-sizing: border-box;
   box-shadow: $box-shadow;
 
