--- a/src/app/components/item/item.component.scss
+++ b/src/app/components/item/item.component.scss
@@ -4,7 +4,7 @@
 h1 {
   font-size: $font-medium;
   font-weight: normal;
-  color: white;
+  color: $text-color;
 }
 
 iframe {
@@ -12,7 +12,7 @@ iframe {
   height: 100%;
 }
 
-.info {
+.item {
   width: 100%;
   height: 100%;
 }
@@ -27,7 +27,7 @@ iframe {
   padding: 0.5rem 4rem;
   background: $description-background;
   text-align: center;
-  color: rgb(220, 220, 220);
+  color: $text-color;
 
   @include phone {
     font-size: 14px;
@@ -42,7 +42,7 @@ iframe {
   transform: translateY(-50%);
 }
 
-.info-link:hover {
+.item-link:hover {
   cursor: pointer;
   filter: brightness(70%);
 }
