--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -35,9 +35,9 @@
   }
 
   #about {
-    margin-top: 0.5rem;
-    font-size: 2.2vh;
+    margin: 0.5rem;
+    font-size: $font-medium;
     color: $text-color;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 1);
+    text-shadow: 0 0 5px black;
   }
 }
