--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,8 +8,6 @@ header {
   width: 100%;
   height: 4rem;
   transition: 0.3s;
-  background: $primary-color-transparent;
-  backdrop-filter: blur(10px);
   overflow: hidden;
 
   img {
@@ -17,6 +15,11 @@ header {
     height: 3rem;
     margin: 0.5rem 0 0.5rem 1rem;
   }
+}
+
+.header-scroll {
+  background: $primary-color-transparent;
+  backdrop-filter: blur(10px);
 }
 
 nav {
