--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -5,7 +5,7 @@
       Hello! My name is Paul Scott. I am a master's student at the University of
       Pennsylvania studying computer and information science. I graduated from
       Penn State with a bachelor's in computer science. My areas of interest are
-      in computer graphics, machine learning, distributed systems, software
+      computer graphics, machine learning, distributed systems, software
       engineering, and web development.
     </p>
   </div>
