--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,9 @@ body {
   height: 100%;
   text-align: center;
   font-family: $font-stack;
+  background: $primary-color;
+}
+
+#background {
   background: $body-color;
 }
