--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -9,7 +9,7 @@
   padding: calc(10vh + 2rem) 0 10vh 0;
   background: url('../../../assets/images/banner.jpg');
   background-size: cover;
-  margin-bottom: 0.5vw;
+  margin-bottom: 0.5rem;
   box-shadow: $box-shadow;
 
   @include phone {
