--- a/src/app/components/section-title/section-title.component.scss
+++ b/src/app/components/section-title/section-title.component.scss
@@ -5,7 +5,7 @@
   font-size: $font-large;
   color: $text-color;
   padding: 2rem;
-  margin: 1vw;
+  margin: 1rem;
   border-radius: 2rem;
   background: $primary-color;
   box-sizing: border-box;
