--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -19,6 +19,6 @@ $header-height: 4rem;
 $footer-height: 12rem;
 $mobile-cutoff: 768px;
 $tablet-cutoff: 1200px;
-$item-margin: 1vw;
+$item-margin: 1rem;
 $item-aspect-ratio: 1.5;
 $item-aspect-ratio-mobile: 1.2;
