--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -29,6 +29,7 @@
 
   img {
     height: 25vh;
+    max-height: 20rem;
     border-radius: 25%;
     margin-bottom: 1rem;
     border: solid 6px $text-color;
