--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -37,7 +37,7 @@
 
   #about {
     margin: 0.5rem;
-    font-size: $font-medium;
+    font-size: $font-banner;
     color: $text-color;
     text-shadow: 0 0 5px black;
   }
