--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -58,7 +58,7 @@ nav {
 .menu-icon-bar {
   width: 100%;
   height: 0.2rem;
-  background: white;
+  background: $text-color;
   transition: 0.3s;
   border-radius: 0.2rem;
 
