--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -12,6 +12,7 @@ $box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 $font-large: 32px;
 $font-medium: 20px;
 $font-small: 14px;
+$font-banner: 16px;
 $font-stack: 'Comfortaa', Arial, serif;
 
 /* sizing */
