--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -2,11 +2,12 @@
   <div id="profile">
     <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
-      Hello! My name is Paul Scott. I am a master's student at the University of
-      Pennsylvania studying computer and information science. I graduated from
-      Penn State with a bachelor's in computer science. My areas of interest are
-      computer graphics, machine learning, distributed systems, software
-      engineering, and web development.
+      Hello! My name is Paul Scott. I am an incoming full-stack software
+      engineer at Merly. I obtained my master's in computer and information
+      science at the University of Pennsylvania, and I obtained my bachelor's
+      degree in computer science from Penn State. My areas of interest are
+      computer graphics, machine learning, distributed systems, emulation,
+      software engineering, and web development.
     </p>
   </div>
 </div>
