--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -24,7 +24,7 @@
   transition: 0.1s;
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   margin-left: var(--spacing);
 }
 
@@ -43,4 +43,17 @@
   height: 2rem;
   background-color: white;
   margin-left: var(--spacing);
+}
+
+@media screen and (max-width: 1024px) {
+  .pageLinks,
+  .verticalSeparator {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .nav img {
+    display: none;
+  }
 }
