--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --spacing: 1rem;
   --border-radius: 0.5rem;
   --card-height: 20rem;
+  --small-card-height: 15rem;
   --min-width: 60rem;
   --box-shadow: 4px 4px 4px #00000055;
 }
