--- a/app/components/card/card.module.css
+++ b/app/components/card/card.module.css
@@ -18,13 +18,13 @@
 }
 
 .title {
-  font-size: 20px;
+  font-size: var(--card-title-font-size);
   font-weight: bold;
 }
 
 .description {
   position: relative;
-  font-size: 16px;
+  font-size: var(--card-description-font-size);
 }
 
 .image {
@@ -42,20 +42,4 @@
   width: 1.2rem;
   right: 0;
   bottom: 0;
-}
-
-@media screen and (max-width: 1024px) {
-  .card {
-    flex: calc(50% - var(--spacing)) !important;
-    max-width: calc(50% - var(--spacing) / 2) !important;
-    height: 18rem !important;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .card {
-    margin-top: var(--spacing);
-    max-width: 100% !important;
-    height: 70vmin !important;
-  }
 }
