--- a/app/components/banner/banner.module.css
+++ b/app/components/banner/banner.module.css
@@ -20,6 +20,7 @@
 
 .profile img {
   width: calc(var(--profile-size) - 4rem);
+  height: auto;
   border-radius: var(--border-radius);
   border: 4px solid var(--font-color);
 }
