--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -5,11 +5,12 @@
   width: 100%;
   height: 4rem;
   background: var(--primary-color);
-  padding: 0.5rem 1rem;
+  padding: 0.75rem;
   box-shadow: 0 4px 4px #00000055;
 }
 
 .header img {
+  width: auto;
   height: 100%;
 }
 
@@ -26,6 +27,8 @@
   text-decoration: none;
   font-size: 18px;
   margin-left: var(--spacing);
+  padding: 0;
+  line-height: 0;
 }
 
 .nav a:hover {
@@ -34,6 +37,7 @@
 }
 
 .nav img {
+  width: auto;
   height: 2rem;
 }
 
@@ -48,12 +52,6 @@
 @media screen and (max-width: 1024px) {
   .pageLinks,
   .verticalSeparator {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .nav img {
     display: none;
   }
 }
