--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,5 +13,5 @@
   border-radius: var(--border-radius);
   margin-top: var(--spacing);
   text-align: center;
-  padding: 4rem;
+  padding: 4rem 2rem;
 }
