--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -1,10 +1,12 @@
+@import "../../constants.module.scss";
+
 .header {
   z-index: 1;
   position: sticky;
   top: 0;
   width: 100%;
   height: 4rem;
-  background: var(--primary-color);
+  background: $primary-color;
   padding: 0.75rem;
   box-shadow: 0 4px 4px #00000055;
 }
@@ -26,7 +28,7 @@
   color: white;
   text-decoration: none;
   font-size: 18px;
-  margin-left: var(--spacing);
+  margin-left: $spacing;
   padding: 0;
   line-height: 0;
 }
@@ -46,7 +48,7 @@
   width: 1px;
   height: 2rem;
   background-color: white;
-  margin-left: var(--spacing);
+  margin-left: $spacing;
 }
 
 @media screen and (max-width: 1024px) {
