--- a/app/components/section/section.module.scss
+++ b/app/components/section/section.module.scss
@@ -1,6 +1,8 @@
+@import "../../constants.module.scss";
+
 .section {
   margin-top: -4rem;
-  padding-top: calc(4rem + var(--spacing));
+  padding-top: calc(4rem + $spacing);
 }
 
 .title {
@@ -13,15 +15,15 @@
   width: 100%;
   height: 4rem;
   padding: 0 1rem;
-  margin-bottom: var(--spacing);
-  background-color: var(--primary-color);
-  border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow);
+  margin-bottom: $spacing;
+  background-color: $primary-color;
+  border-radius: $border-radius;
+  box-shadow: $box-shadow;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: var(--spacing);
+  gap: $spacing;
 }
