--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -1,11 +1,10 @@
 @import "../../constants.module.scss";
 
 .footer {
-  @include primary-style;
   width: 100%;
   font-size: 20px;
+  font-weight: bold;
   line-height: 1.5;
-  margin-top: $spacing;
   text-align: center;
   padding: 4rem 2rem;
 }
