--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -1,14 +1,14 @@
 @import "../../constants.module.scss";
 
 .header {
+  @include double-border(3px, #d1d1d2, #4e4e4e);
   z-index: 1;
   position: sticky;
   top: 0;
   width: 100%;
   height: 4rem;
-  background: $primary-color;
+  background: #c6b2a8;
   padding: 0.75rem;
-  box-shadow: 0 4px 4px #00000055;
 }
 
 .header img {
