--- a/app/components/banner/banner.module.scss
+++ b/app/components/banner/banner.module.scss
@@ -21,7 +21,7 @@
 .profile img {
   width: calc($profile-size) - 4rem;
   height: auto;
-  border: 6px ridge $font-color;
+  border: 6px ridge white;
 }
 
 .description {
