--- a/app/components/card/card.module.scss
+++ b/app/components/card/card.module.scss
@@ -1,10 +1,11 @@
 @import "../../constants.module.scss";
 
 .card {
+  @include window-border($large-border);
   position: relative;
   transition: 0.1s;
   aspect-ratio: 4/3;
-  background-color: $primary-color;
+  background-color: $menu-color;
   overflow: hidden;
 }
 
@@ -14,7 +15,7 @@
   left: 0;
   width: 100%;
   padding: 1rem;
-  background-color: $card-label-color;
+  background-color: rgba($menu-color, 0.75);
 }
 
 .title {
