--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -2,8 +2,7 @@
 
 .footer {
   width: 100%;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: $medium-font-size;
   line-height: 1.5;
   text-align: center;
   padding: 4rem 2rem;
