--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,11 +9,11 @@
 html,
 body {
   max-width: 100vw;
-  background-color: $background-color;
-  color: $font-color;
+  background-color: $menu-color;
+  color: white;
 }
 
 a {
-  color: $link-color;
+  color: $menu-color;
   text-decoration: none;
 }
