--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -3,6 +3,12 @@
 .main {
   max-width: 80rem;
   width: 100%;
-  padding: 0 $spacing;
-  margin: $spacing auto;
+  padding: 0 $window-spacing;
+  margin: $window-spacing auto;
+
+  @media screen and (max-width: 640px) {
+    max-width: 100%;
+    padding: 0 0.5rem;
+    margin: 0.5rem auto;
+  }
 }
